--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.2.0",
     "@fastify/jwt": "^10.0.0",
+    "@polymarket/clob-client": "^5.2.1",
+    "ethers": "^5.8.0",
     "fastify": "^5.6.2",
     "moment": "^2.30.1",
     "mongo": "^0.1.0"
