--- a/Dockerfile.serverless
+++ b/Dockerfile.serverless
@@ -19,3 +19,5 @@ COPY package*.json ./
 RUN npm ci --omit=dev
 
 COPY --from=build_image /usr/src/app/dist ./dist
+
+CMD [ "node", "/usr/src/app/dist/index.js" ]
