--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fastify/jwt": "^10.0.0",
     "@polymarket/clob-client": "^5.2.1",
     "axios": "^1.13.2",
+    "chalk": "^5.6.2",
     "ethers": "^5.8.0",
     "fastify": "^5.6.2",
     "moment": "^2.30.1",
