make sleep time configurable via `SLEEP_TIME_MIN` in environment variables

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -16,6 +16,7 @@ services:
       - PROXY_WALLET=${PROXY_WALLET}
       - MAX_PURCHASE_SHARE_PRICE=${MAX_PURCHASE_SHARE_PRICE}
       - MAX_AMOUNT_TO_SPEND=${MAX_AMOUNT_TO_SPEND}
+      - SLEEP_TIME_MIN=${SLEEP_TIME_MIN}
     ports:
       - "${PORT}:${PORT}"
 
